fix collections pages
Change-Id: Ibc02dd592fd7387a3d6e3b4192323cd08ce5a13c

--- a/app/views/collections/collection_backbone_app.html.erb
+++ b/app/views/collections/collection_backbone_app.html.erb
@@ -1,6 +1,6 @@
 <%
-  @use_new_styles = true
+  @body_classes << 'no-page-block'
   js_bundle :collections_app
   jammit_css :collections_app
 %>
-<div id="collectionsApp" class="container v-gutter"></div>
+<div id="collectionsApp"></div>
