tweak registration styles
Change-Id: I0835229f5dd91376dd33e550e2b11cc256d813c4

--- a/app/stylesheets/registration.scss
+++ b/app/stylesheets/registration.scss
@@ -12,7 +12,8 @@ a {
 }
 
 .registration-dialog {
-  margin-top: 2em
+  margin-top: 2em;
+  font-size: 1.1em;
 }
 
 .registration-dialog .spinner {
@@ -87,6 +88,8 @@ a {
   position: relative;
   h2 {
     text-indent: -9999em;
+    margin: 0;
+    height: 30px;
   }
 }
 
