--- a/app/views/jst/registration/login.handlebars
+++ b/app/views/jst/registration/login.handlebars
@@ -1,7 +1,7 @@
 <form method="post" action="/login" id="login_form">
   <input type="hidden" name="redirect_to_ssl" value="1"/>
   <div>
-    <input name="pseudonym_session[unique_id]" class="login-input" placeholder="{{login_handle_name}}">
+    <input name="pseudonym_session[unique_id]" class="login-input" type="text" placeholder="{{login_handle_name}}">
   </div>
   <div>
     <input name="pseudonym_session[password]" class="login-input" type="password" placeholder="{{#t "password"}}Password{{/t}}">
