fix section-tabs-header-subtitle in left nav
http://cl.ly/1s0h1x0t3r1c1B39372o

Change-Id: I8ffe0346075a53687341620a23f0aae2e8f1147f

--- a/app/stylesheets/blue/_components.scss
+++ b/app/stylesheets/blue/_components.scss
@@ -84,6 +84,12 @@
     font-weight: normal;
     margin-bottom: 0;
   }
+  #section-tabs-header-subtitle {
+    display: block;
+    font-size: 11px;
+    font-style: italic;
+    color: inherit;
+  }
 
   & > *:first-child {
     border-top: 0 !important; // oldskool important
