fix spec failure after dev/fft merge
Change-Id: I0af6277741f4195ef6dc2f948b26f1ae78454b15
Reviewed-on: https://gerrit.instructure.com/11920
Reviewed-by: Jacob Fugal <jacob@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/views/shared/_wiki_sidebar.html.erb
+++ b/app/views/shared/_wiki_sidebar.html.erb
@@ -15,7 +15,7 @@
       <select>
         <% @current_user.collections.each do |collection| %>
           <option value="<%= collection.id %>"><%= collection.name %></option>
-        <% end %>
+        <% end if @current_user %>
       </select>
       <ul></ul>
     </div>
