CSS: line section tab header bottom up with breadcrumb border
fixes: #9210

should looks like: http://cl.ly/2c1k1j2d1U0804241n1V

Change-Id: I08ad9212906ad5685a23078379f20d3f2c9e97be
Reviewed-on: https://gerrit.instructure.com/11922
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/stylesheets/blue/_components.scss
+++ b/app/stylesheets/blue/_components.scss
@@ -83,6 +83,7 @@
     font-size: $baseFontSize;
     font-weight: normal;
     margin-bottom: 0;
+    line-height: 19px;
   }
   #section-tabs-header-subtitle {
     display: block;
