CSS, take out border line under last to-do item
this: http://cl.ly/2z3K311g023J0T2N1j0u
not this: http://cl.ly/1o2O1b1k2m3C2R191l2L

Change-Id: I0b1d72911229b1a764a486cb3ba82a909bf97e98
Reviewed-on: https://gerrit.instructure.com/11931
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Jon Jensen <jon@instructure.com>

--- a/app/stylesheets/base/_#right-side.sass
+++ b/app/stylesheets/base/_#right-side.sass
@@ -56,6 +56,10 @@
           text-decoration: underline
         em
           color: #666
+    &:last-child a
+      border-bottom: none
+      box-shadow: none
+      
     small // this is for things like "nothing for the next week"
       padding: 3px 0 0px 31px
       display: block
