style, wording and link fixes for registration pages
fixes #9209, #9216, #9217, #9227

visual changes:
* restore bootstrap form styles
* change "course code" to "join code"
* made dialog buttons consistent with rest of app
* fix observer submit button wording
* remove verbiage around minimum age (before validation)
* fix link to home page (logo)

behavioral change:
* only enforce min age for signups without a join code. once they fail
  validation, display an error and hide the form

test plan:
* go through signup flows, ensure visual stuff above is correct
* ensure users with a course code can sign up with any age
* ensure users without a course code must be >= 13

Change-Id: I3d02a6f1a768ab054c825db30fb73a81f4eb5e59
Reviewed-on: https://gerrit.instructure.com/11939
Reviewed-by: Ryan Shaw <ryan@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/views/courses/settings.html.erb
+++ b/app/views/courses/settings.html.erb
@@ -363,7 +363,7 @@ Hashtags should consist of letters, numbers, dashes and underscores (no spaces).
                   This course has enabled open enrollment. Students can
                   self-enroll in the course once you share with them this URL:
                   *%{url}*. Alternatively, they can sign up at *%{url2}* and
-                  use the following course code: *%{code}*
+                  use the following join code: *%{code}*
                 TEXT
             %>
           </span>
