--- a/app/views/jst/registration/login.handlebars
+++ b/app/views/jst/registration/login.handlebars
@@ -1,4 +1,4 @@
-<form method="post" action="/login" id="login_form">
+<form method="post" action="/login" id="login_form" class="bootstrap-form">
   <input type="hidden" name="redirect_to_ssl" value="1"/>
   <div>
     <input name="pseudonym_session[unique_id]" class="login-input" type="text" placeholder="{{login_handle_name}}">
