--- a/app/views/jst/registration/parentDialog.handlebars
+++ b/app/views/jst/registration/parentDialog.handlebars
@@ -1,5 +1,5 @@
 <div class="registration-dialog">
-  <form class="form-horizontal" method="post" action="/users">
+  <form class="form-horizontal bootstrap-form" method="post" action="/users">
     <div class="control-group">
       <label class="control-label" for="parent_name">{{#t "labels.name"}}Your Name{{/t}}</label>
       <div class="controls">
@@ -35,7 +35,7 @@
     <div class="control-group">
       <div class="controls">
         <input type="hidden" name="enrollment_type" value="observer">
-        <button class="button" type="submit">{{#t "buttons.start_stalking"}}Start Stalking{{/t}}</button>
+        <button class="button btn-primary" type="submit">{{#t "buttons.start_participating"}}Start Participating{{/t}}</button>
       </div>
     </div>
   </form>
