--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,9 @@
 <%
   js_bundle :registration
   jammit_css :registration
-  js_env :LOGIN => {
-    :LOGIN_HANDLE_NAME => (@domain_root_account.login_handle_name rescue AccountAuthorizationConfig.default_login_handle_name)
+  js_env :USER => {
+    :LOGIN_HANDLE_NAME => (@domain_root_account.login_handle_name rescue AccountAuthorizationConfig.default_login_handle_name),
+    :MIN_AGE => User.self_enrollment_min_age
   }
 %>
 <% content_for :head do %>
@@ -11,7 +12,7 @@
 
 <div id="registration_header">
   <div class="registration-content">
-    <h1><a href="//www.instructure.com">Instructure</a></h1>
+    <h1><a href="http://www.instructure.com">Instructure</a></h1>
     <a id="registration_login" href="/login">Login</a>
   </div>
 </div>
