--- a/app/stylesheets/blue/_variables.scss
+++ b/app/stylesheets/blue/_variables.scss
@@ -8,7 +8,7 @@ $grayLight:                     lighten($gray, 20%) !default;
 $grayLighter:                   lighten($gray, 50%) !default;
 $white:                         #fff !default;
 $activeBG:                      #D6ECFC;
-$blue:                          #4B92E9; // links
+$blue:                          #4B92E9;
 $blueDark:                      #244979;
 $blueGray:                      #94ABB9;
 $inputDisabledBackground:       transparent;
