calendar2: show "What's new?" link
closes #9310

Test plan:
  * Go to the calendar on an account with calendar2 enabled.
  * There should be a 'What's new?' link beside the 'Go back to the old
    calendar' button

Change-Id: I50fdee494ae243166c34aeb5163f2b9e57bc7309
Reviewed-on: https://gerrit.instructure.com/12013
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/views/jst/calendar/calendarApp.handlebars
+++ b/app/views/jst/calendar/calendarApp.handlebars
@@ -2,6 +2,7 @@
   <div id="calendar-header">
     <a href="#" id="refresh_calendar_link">{{#t "refresh"}}Refresh{{/t}}</a>
     <a id="change-calendar-version" href="/switch_calendar/1" data-method="post" rel="nofollow" class="btn btn-mini btn-primary">{{#t "use_old_calendar"}}Go back to the old calendar{{/t}}</a>
+    <a href="http://guides.instructure.com/s/2204/m/4152/l/59600-how-is-the-new-calendar-different-from-the-old-calendar" class="whats-new">What's new?</a>
 
     <span id="calendar_views">
       <input type="radio" id="week"      name="calendar_view" /><label for="week">{{#t "links.calendar_week"}}Week{{/t}}</label>
