--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   right_side = yield :right_side
   wizard = yield :wizard_box
   top_nav = yield :top_nav
+  show_fixed_bottom = @fixed_warnings.present? || @current_user.try(:fake_student?)
 
   content_for :pre_html do
     @body_class_no_headers = @headers == false
@@ -19,6 +20,7 @@
     #we dont want to render a right side unless there is actually content in it.
     @body_classes << "with-right-side" if right_side and not right_side.strip.empty?
     @body_classes << "padless-content" if @padless
+    @body_classes << 'with-fixed-bottom' if show_fixed_bottom
     @body_classes << @active_tab
   end
 
@@ -171,6 +173,10 @@
     </footer>
   </div>
 </div>
+
+<% if show_fixed_bottom %>
+  <%= render :partial => 'layouts/fixed_bottom' %>
+<% end %>
 
 <% if wizard %>
   <div id="wizard_spacer_box"></div>
