add padding back to <input> elements
Change-Id: I88e08fcd42023a4b1c4159099f258297911f8a3e
Reviewed-on: https://gerrit.instructure.com/12159
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/stylesheets/jqueryui/_jquery.ui.theme.scss
+++ b/app/stylesheets/jqueryui/_jquery.ui.theme.scss
@@ -15,7 +15,7 @@
 ----------------------------------*/
 .ui-widget { font-size: $fsDefault; }
 .ui-widget .ui-widget { font-size: 1em; }
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-size: 1em; }
+//.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-size: 1em; }
 .ui-widget-content { border: 1px solid $borderColorContent;
   background: $bgColorContent; //I had this disabled, why?
   color: $fcContent;
