--- a/app/stylesheets/bootstrap_parts/_forms.scss
+++ b/app/stylesheets/bootstrap_parts/_forms.scss
@@ -7,6 +7,8 @@ input[type="url"], input[type="search"], input[type="tel"], input[type="color"],
   @include border-radius($inputBorderRadius);
   @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
   @include transition(#{border linear .2s, box-shadow linear .2s});
+  padding: 4px 2px;
+
 
   // Focus state
   &:focus {
@@ -94,24 +96,6 @@ input[type="url"], input[type="search"], input[type="tel"], input[type="color"],
   textarea {
     height: auto;
   }
-  //// Everything else
-  //textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"],
-  //input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"],
-  //input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input {
-  //  background-color: $inputBackground;
-  //  border: 1px solid $inputBorder;
-  //  @include border-radius($inputBorderRadius);
-  //  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
-  //  @include transition(#{border linear .2s, box-shadow linear .2s});
-  //
-  //  // Focus state
-  //  &:focus {
-  //    border-color: rgba(82,168,236,.8);
-  //    outline: 0;
-  //    outline: thin dotted \9; /* IE6-9 */
-  //    @include box-shadow(#{inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6)});
-  //  }
-  //}
 
   // Position radios and checkboxes better
   input[type="radio"], input[type="checkbox"] {
