--- a/app/stylesheets/jqueryui/_jquery.ui.dialog.scss
+++ b/app/stylesheets/jqueryui/_jquery.ui.dialog.scss
@@ -24,19 +24,10 @@
 
 
 //our overrides
+
 .ui-dialog {
   padding: 0;
-  .ui-dialog-buttonpane {
-    background-color: $formActionsBackground;
-    box-shadow: inset 0 1px 0 white;
-    border-top-color: #e5e5e5;
-  }
-  .ui-dialog-titlebar {
-    border-top: 0; border-left: 0; border-right: 0;
-    border-bottom-left-radius: 0; border-bottom-right-radius: 0;
-    font-weight: bold;
-    font-size: 14px;
-  }
+
   .ui-dialog-titlebar-close {
     span { background: url(/images/jqueryui/icon_sprite.png) 0 -16px no-repeat; }
     &:hover, &:focus {
@@ -44,4 +35,20 @@
       span { background-position: -16px -16px; }
     }
   }
+}
+
+// note that these styles are shared in both .ui-dialog and .ui-datepicker
+
+.ui-datepicker .ui-datepicker-time,
+.ui-dialog .ui-dialog-buttonpane {
+  background-color: $formActionsBackground;
+  box-shadow: inset 0 1px 0 white;
+  border-top: 1px solid #e5e5e5;
+}
+.ui-datepicker .ui-datepicker-header,
+.ui-dialog .ui-dialog-titlebar {
+  border-top: 0; border-left: 0; border-right: 0;
+  border-bottom-left-radius: 0; border-bottom-right-radius: 0;
+  font-weight: bold;
+  font-size: 14px;
 }
