registration refactor, temp login functionality, closes #9372
change registration flows for teachers, higher-ed students, and parents.
now users can start using canvas immediately before confirming their
email address (and setting a password). they get a nice big reminder when
they first view the dashboard, and can't edit their profile (or related
things) until they do so.

test plan:
1. go to the signup form for a teacher
2. fill it out
3. confirm that you are immediately logged in to the dashboard
4. confirm that you get a big popup when you first view the dashboard
5. confirm that you can't edit your profile
6. repeat steps 1-5 for higher-ed students (no join code)
7. repeat steps 1-5 for parents (observers)
8. confirm that students registering with a join code do not need to
   verify their email address (since no email is sent)

Change-Id: I4e7e1c083d70725fffd345016f1ca1eec4aeab13
Reviewed-on: https://gerrit.instructure.com/12172
Reviewed-by: Ryan Shaw <ryan@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -60,6 +60,9 @@
     &.ui-state-error, &.ui-state-warning
       i
         background-image: url(/images/warning_16.png)
+    &.no_close
+      a.close_link
+        display: none
     &.xlarge
       font-size: 1.5em
       height: 58px
@@ -71,6 +74,19 @@
       &.ui-state-error, &.ui-state-warning
         i
           background-image: url(/images/warning_36.png)
+      &.confirm-email
+        text-align: left
+        font-size: 1em
+        line-height: 1.25
+        strong
+          font-weight: normal
+          font-size: 1.4em
+          display: block
+          margin-top: 8px
+          color: #000
+        i
+          float: left
+          margin: 8px 16px 0 24px
 
 #unauthorized_message
   border: 1px solid #000
