fix scheduler styling, fixes #9393
test plan:
load scheduler as a user with no appointment groups,
make sure it looks good. like this: http://cl.ly/250X0M022Q2r0F2n1438

also make sure these pages look like so:
http://cl.ly/1s2o3L192x0b0H2o1V2B
http://cl.ly/3J022J3E2v122T1q0s3U

Change-Id: Ifce8fabe7a870e8d68a62f8774f8fffdd78d5b2b
Reviewed-on: https://gerrit.instructure.com/12176
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -10,6 +10,14 @@
   .calendar-loaded &
     +opacity(1)
 
+#main
+  background-color: transparent
+  border: none
+
+#content
+  padding-right: 0
+
+
 #calendar-app
   position: relative
 
