--- a/app/views/outcomes/_outcome.html.erb
+++ b/app/views/outcomes/_outcome.html.erb
@@ -1,3 +1,4 @@
+<%= outcome_link = outcome; outcome = outcome_link && outcome_link.content %>
 <div class="learning_outcome outcome_item <%= 'out_of_context' if outcome && (outcome.context_id != @context.id || outcome.context_type != @context.class.to_s) %>" id="outcome_<%= outcome ? outcome.id : "blank" %>" style="<%= hidden unless outcome %>">
   <div class="header">
     <a href="#" class="reorder_link no-hover"><%= image_tag "move.png" %></a>
@@ -11,13 +12,13 @@
       <a href="<%= context_url(@context, :context_outcome_url, outcome ? outcome.id : "{{ id }}") %>" class="edit_outcome_link no-hover"><%= image_tag "edit.png" %></a>
       <% end %>
       <% if !outcome || can_do(outcome, @current_user, :delete) || can_do(@context, @current_user, :manage_outcomes) %>
-        <a href="<%= context_url(@context, :context_outcome_url, outcome ? outcome.id : "{{ id }}") %>" class="delete_outcome_link remove_outcome_link no-hover" title="<%= t(:remove_this_outcome, "Remove this outcome") %>" style="<%= hidden unless outcome && outcome.context_code != @context.asset_string %>"><%= image_tag "delete_circle.png" %></a>
+        <a href="<%= context_url(@context, :context_outcome_url, outcome_link ? outcome_link.id : "{{ id }}") %>" class="delete_outcome_link remove_outcome_link no-hover" title="<%= t(:remove_this_outcome, "Remove this outcome") %>" style="<%= hidden unless outcome && outcome.context_code != @context.asset_string %>"><%= image_tag "delete_circle.png" %></a>
         <a href="<%= context_url(@context, :context_outcome_url, outcome ? outcome.id : "{{ id }}") %>" class="delete_outcome_link really_delete_outcome_link no-hover" title="<%= t(:delete_this_outcome, "Delete this outcome") %>" style="<%= hidden if outcome && outcome.context_code != @context.asset_string %>"><%= image_tag "delete.png" %></a>
       <% end %>
     </div>
     <div class="clear"></div>
     <div style="display: none;">
-      <div class="asset_string"><%= outcome && outcome.asset_string %></div>
+      <div class="asset_string"><%= outcome_link && outcome_link.asset_string %></div>
       <div class="id"><%= outcome && outcome.id %></div>
     </div>
   </div>
