--- a/app/views/outcomes/_outcome_group.html.erb
+++ b/app/views/outcomes/_outcome_group.html.erb
@@ -26,13 +26,12 @@
     <div style="display: block; height: 10px;"></div>
     <div class="child_outcomes">
       <% if outcome_group %>
-          <% outcome_group.sorted_content.each do |item| %>
-            <% if item.is_a?(LearningOutcome) %>
-              <%= render :partial => "outcome", :object => item %>
-            <% elsif item.is_a?(LearningOutcomeGroup) %>
-              <%= render :partial => "outcome_group", :object => item %>
-            <% end %>
-          <% end %>
+        <% outcome_group.child_outcome_groups.each do |group| %>
+          <%= render :partial => "outcome_group", :object => group %>
+        <% end %>
+        <% outcome_group.child_outcome_links.each do |link| %>
+          <%= render :partial => "outcome", :object => link %>
+        <% end %>
       <% end %>
     </div>
 </div>
