don't allow non-default accounts to create new logins with e-mail addresses
it always created them in the default account, so it didn't make sense
anyway

test plan:
 * go to the profile page, and add an e-mail address
 * on a default account, it should have a checkbox to create an
   associated login
 * on a non-default account, it shouldn't

Change-Id: I38d216df828c5bbf4fd9579e2ead06241692c8dd
Reviewed-on: https://gerrit.instructure.com/12198
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Simon Williams <simon@instructure.com>

--- a/app/views/profile/_ways_to_contact.html.erb
+++ b/app/views/profile/_ways_to_contact.html.erb
@@ -140,12 +140,16 @@
   <tr>
     <td style="white-space: nowrap"><%= label :communication_channel, :address, before_label(:email_address, "Email Address") %></td>
     <td><%= text_field :communication_channel, :address %></td>
-  </tr><tr>
+  </tr>
+  <% if @domain_root_account == Account.default %>
+  <tr>
     <td colspan="2">
       <input type="checkbox" id="build_pseudonym_for_email" name="build_pseudonym" value="1"/>
       <label for="build_pseudonym_for_email"><%= t('labels.enable_login_for_email', "I want to log in to Canvas using this email address") %></label>
     </td>
-  </tr><tr>
+  </tr>
+  <% end %>
+  <tr>
     <td colspan="2">
       <button type="submit" class="button"><%= t('buttons.register_email', "Register Email") %></button>
     </td>
