make things with gradients have sane bg-color fallback for ie8
fixes: #9247 refs: #9244

since ie8 can't do gradients we weren't setting a bg
color at all, this will use the middle of the top and bottom
colors

test plan:
look at the tabs of wiki-sidebar
or the date picker popup,
make sure they look good

Change-Id: I518aa5f40670f5184cb2c353454ca238ecfb569b
Reviewed-on: https://gerrit.instructure.com/12205
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/stylesheets/jqueryui/_variables.sass
+++ b/app/stylesheets/jqueryui/_variables.sass
@@ -6,7 +6,8 @@ $fcContent: #222
 $fcHeader: hsl(0, 0%, 20%)
 $borderColorHeader: hsl(213, 7%, 68%)
 $textShadowHeader: hsla(0, 100%, 100%, 0.75)
-$gradientHeader: hsl(207, 22%, 90%), hsl(206, 20%, 86%)
+$gradientTopHeader: hsl(207, 22%, 90%)
+$gradientBottomHeader: hsl(206, 20%, 86%)
 
 $borderColorDefault: #ccc
 $fcDefault: #333
