--- a/app/stylesheets/blue/_mixins.scss
+++ b/app/stylesheets/blue/_mixins.scss
@@ -7,7 +7,7 @@
   text-shadow: 0 1px 1px $textShadowHeader;
 }
 @mixin header-bg {
-  @include background-image(linear-gradient($gradientHeader));
+  @include vertical-gradient($gradientTopHeader, $gradientBottomHeader);
   box-shadow: inset 0 1px 0 hsla(0, 100%, 100%, 0.75);
 }
 
