--- a/app/stylesheets/jqueryui/_jquery.ui.theme.scss
+++ b/app/stylesheets/jqueryui/_jquery.ui.theme.scss
@@ -30,16 +30,14 @@
 // this was here but if you enable it it will break blue icons in dialogs, maybe we can just make the .btn-primary selector more specific?
 //.ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default { border: 1px solid $borderColorDefault; color: $fcDefault; font-weight: normal;
-  @include background-image(linear-gradient(white, #ffffff 25%, #e6e6e6));
+  @include vertical-gradient(white, #e6e6e6);
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   border-bottom-color: #bbb;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-  @include single-transition(background-image, 0.1s, linear, 0);
-
 }
 
 .ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  {border: 1px solid $borderColorHighlight; background: $bgColorHighlight; color: $fcHighlight;
-  @include background-image(linear-gradient(#fceec1, #eedc94));
+  @include vertical-gradient(#fceec1, #eedc94);
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   border-color: #eedc94 #eedc94 #e4c652; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25);
@@ -53,7 +51,7 @@
 }
 .ui-state-hover a, .ui-state-hover a:hover { color: $fcHover; text-decoration: none; }
 .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid $borderColorActive; color: $fcActive; background: $bgColorActive;
-  @include background-image(linear-gradient($gradientTopActive, $gradientBottomActive));
+  @include vertical-gradient($gradientTopActive, $gradientBottomActive);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: $fcActive; text-decoration: none; }
@@ -63,7 +61,7 @@
 ----------------------------------*/
 
 .ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error {border: 1px solid $borderColorError; background: $bgColorError; color: $fcError;
-  @include background-image(linear-gradient(#ee5f5b, #c43c35));
+  @include vertical-gradient(#ee5f5b, #c43c35);
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-color: #c43c35 #c43c35 #882a25;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
