--- a/app/stylesheets/jqueryui/_jquery.ui.tabs.scss
+++ b/app/stylesheets/jqueryui/_jquery.ui.tabs.scss
@@ -20,7 +20,7 @@
     border-width: 0 0 1px 0;
     box-shadow: none; //override .ui-widget-header
     li { list-style: none; float: left; position: relative; top: 1px; margin: 0 .2em 1px 0; border-bottom: 0 !important; padding: 0; white-space: nowrap;
-      a { float: left; padding: .5em 1em; text-decoration: none;
+      a { float: left; padding: .5em .9em; text-decoration: none;
         font-weight: bold;
         text-shadow: 0 1px 0 rgba(255,255,255,0.5);
       }
