fix eportfolio section list fixes #9430
should look like this:
https://dl.dropbox.com/u/10952887/screenshot.png

Change-Id: I3fe9bad1e4b944990082c06371b5c648b4b59cc4
Reviewed-on: https://gerrit.instructure.com/12208
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -123,7 +123,8 @@
 <div id="wrapper-container">
   <div id="wrapper">
     <% if @show_left_side %>
-    <div id="left-side" class="list-view">
+      <%# @left_side_list_view is temporary until we redo eportfolios %>
+      <div id="left-side" class="<% if !@no_left_side_list_view %>list-view<% end %>">
       <% if left_side %>
         <%= left_side %>
       <% else %>
