new-new breadcrumbs (that look like the old ones)
closes: #9243

test plan: look at how breadcrumbs look

Change-Id: Ib55dfd8b0eb7c30bab08b38732b7eb108baa73f2
Reviewed-on: https://gerrit.instructure.com/12232
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Florence <ryanf@instructure.com>

--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -107,13 +107,21 @@ body
     li
       float: left
       height: 27px
-      line-height: 27px
-      &:before // :after would be better, but ie8 can't do :last-child to take the '/' of the last
-        content: '/' // works in ie8+
-        padding: 0 10px
+      line-height: 29px
+      padding-left: 12px
+      margin-left: 8px
+      background: url(/images/breadcrumb-chevron.png) left 50% no-repeat
       &:first-child
-        &:before
-          content: none
+        background: none
+        padding-left: 0
+        margin-left: 0
+    .home a
+      background: url(/images/breadcrumb-home.png) no-repeat left 50%
+      display: block
+      width: 10px
+      height: 26px
+      text-indent: -999px
+
   .ellipsis
     display: inline-block
 
