new login page styles, fixes #9458
gets rid of the old green modal style. adds a new modal style (light gray)
and a login style (dark gray). a few form tweaks.

test plan:
1. confirm the login page works and looks correct
2. confirm the unauthorized page (e.g. /courses/1 when not logged in)
   works and looks correct
3. confirm the confirm registration page works and looks correct
4. confirm the course self-enrollment page works and looks correct
5. confirm the oauth2 confirm page works and looks correct

Change-Id: Ib9197693ec7b45349f25d69b9931bbae4c7ee831
Reviewed-on: https://gerrit.instructure.com/12246
Tested-by: Jenkins <jenkins@instructure.com>
Reviewed-by: Ryan Shaw <ryan@instructure.com>

--- a/app/views/shared/unauthorized.html.erb
+++ b/app/views/shared/unauthorized.html.erb
@@ -6,17 +6,11 @@
   <% end %>
 
 <% end %>
-<% content_for :stylesheets do %>
-<style>
-#unauthorized_holder #modal-box {
-  margin-top: 10px;
-}
-</style>
-<% end %>
 <% @show_left_side = false %>
+<div id="unauthorized_holder">
 <% if (@unauthorized_user && @current_user && @current_user != @unauthorized_user) || @unauthorized_user || @unauthorized_message || @context || @needs_cookies %>
-  <div class="ui-state-error" style="margin:30px auto 0; padding: 1em; width: 640px;" >
-    <h2 style="text-align:center;">
+  <div class="ui-state-error">
+    <h2>
       <% if @needs_cookies -%>
         <%= t('headings.needs_cookies', %{Cookies Required}) %>
       <% elsif !@files_domain && (!@current_user || @unauthorized_user) -%>
@@ -41,7 +35,7 @@
     <% elsif @files_domain %>
       <p><%= t('needs_login', %{Access to this page is limited to authorized users.  You do not have currently have permission to view this page.}) %></p>
     <% elsif !@current_user %>
-      <p><%= t('unauthorized_action', %{Access to this page is limited to authorized users.  You will need to log in before you can view the content on this page.}) %></p>
+      <p><%= t('unauthorized_action', %{You need to log in before you can view this page.}) %></p>
     <% elsif @context %>
       <p>
         <% if @context.try_rescue(:is_public) %>
@@ -56,7 +50,6 @@
   </div>
 <% end %>
 <% if !@current_user && !@files_domain %>
-  <div id="unauthorized_holder">
-  <%= render :partial => "shared/login" %>
-  </div>
+  <%= render :partial => "shared/login", :locals => {:hide_fft => true} %>
 <% end %>
+</div>
