--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -1518,26 +1518,32 @@ form.user_content_post_form
     vertical-align: middle
     margin-right: 10px
   b
+    line-height: 28px
     vertical-align: middle
 
-.fixed_warning
-  background-color: #FDD
-  border-width: 2px 0 0 0
-  border-style: solid
-  border-color: black
-  padding: 15px
-  opacity: 0.90
-  color: black
+  #masquerade_bar
+    padding: 15px
+    .buttons
+      float: right
+      .btn
+        margin-left: 10px
+      .btn-primary
+        color: white
+    .button-explanation
+      float: right
+      font-size: 10px
+      text-align: right
+    .masquerading_avatar
+      float: left
+      img
+        margin: -3px 10px 0 0
+        max-height: 35px
 
-#sv_bar
-  padding: 15px 15px 20px 15px
-  .buttons
-    float: right
-    .btn
-      margin-left: 10px
-    .btn-primary
-      color: white
-  .button-explanation
-    float: right
-    font-size: 10px
-    text-align: right
+  .fixed_warning
+    background-color: #FDD
+    border-width: 2px 0 0 0
+    border-style: solid
+    border-color: black
+    padding: 15px
+    opacity: 0.90
+    color: black
