--- a/app/views/shared/_identity.html.erb
+++ b/app/views/shared/_identity.html.erb
@@ -7,9 +7,10 @@
       <li><%= link_to t('links.log_in', "Log In"), login_path %></li>
     <% end %>
   <% else %>
-    <li class="user_name"><%= link_to @current_user.short_name, settings_profile_path %></li>
-    <% if @real_current_user && @real_current_user != @current_user && !@current_user.fake_student? %>
-      <li class="stop_masquerading"><%= link_to t('links.stop_masquerading', "[Stop Masquerading]"), user_masquerade_url(@real_current_user.id), :method => :post %></li>
+    <% if @real_current_user && @real_current_user != @current_user %>
+      <li class="user_name"><%= link_to t('masquerading.as', "As: *%{user_name}*", :user_name => @current_user.short_name, :wrapper => '<span class="emphasize-name">\1</span>'), settings_profile_path %></li>
+    <% else %>
+      <li class="user_name"><%= link_to @current_user.short_name, settings_profile_path %></li>
     <% end %>
     <% unless @current_user.fake_student? %>
       <li class="first inbox"><a href="<%= conversations_path %>"><span><%= t 'links.inbox', "Inbox" %></span>
