--- a/app/stylesheets/ui.selectmenu.scss
+++ b/app/stylesheets/ui.selectmenu.scss
@@ -1,8 +1,9 @@
+@import 'environment';
 /* Selectmenu
 ----------------------------------*/
 .ui-selectmenu { display: block; display: inline-block; position: relative; height: 2.2em; vertical-align: middle; text-decoration: none; overflow: hidden; zoom: 1; }
 .ui-selectmenu-icon { position:absolute; right:6px; margin-top:-8px; top: 50%; }
-.ui-selectmenu-menu { padding:0; margin:0; position:absolute; top: 0; display: none; z-index: 1005; background: #fff} /* z-index: 1005 to make selectmenu work with dialog */
+.ui-selectmenu-menu { padding:0; margin:0; position:absolute; top: 0; display: none; z-index: 1005;} /* z-index: 1005 to make selectmenu work with dialog */
 .ui-selectmenu-menu  ul { padding:0; margin:0; list-style:none; position: relative; overflow: auto; overflow-y: auto ; overflow-x: hidden; } 
 .ui-selectmenu-open { display: block; }
 .ui-selectmenu-menu-popup { margin-top: -1px; }
@@ -20,8 +21,24 @@
 .ui-selectmenu-menu .ui-selectmenu-group { font-size: 1em; }
 .ui-selectmenu-menu .ui-selectmenu-group .ui-selectmenu-group-label { line-height: 1.4em; display:block; padding: .6em .5em 0; font-weight: bold; }
 .ui-selectmenu-menu .ui-selectmenu-group ul { margin: 0; padding: 0; }
-/* IE6 workaround (dotted transparent borders) */
-* html .ui-selectmenu-menu li { border-color: pink; filter:chroma(color=pink); width:100%; }
-* html .ui-selectmenu-menu li a { position: relative }
 /* IE7 workaround (opacity disabled) */
 *+html .ui-state-disabled, *+html .ui-state-disabled a { color: silver; }
+
+// override .ui-state-hover a styles
+.ui-selectmenu-menu a {
+  color: $link_color;
+  text-shadow: none;
+}
+
+.ui-selectmenu-menu {
+  .ui-state-focus, .ui-state-hover {
+    @include vertical-gradient($gradientTopActive, $gradientBottomActive);
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  }
+  // the wierd specificity here is for the section menu in speedGrader
+  .ui-state-hover > .ui-selectmenu-item > a,
+  .ui-state-hover > a,
+  a.ui-state-focus {
+    color: white;
+  }
+}
